[package]
name = "act-zero-ext"
version = "0.1.1"
edition = "2024"
description = "Macros for act-zero"
license = "MIT"
documentation = "https://docs.rs/act-zero-ext"
repository = "https://github.com/praveen-reddy/act-zero-ext"
keywords = ["actor", "actor-model", "async", "macro"]
categories = ["asynchronous", "concurrency", "rust-patterns"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
act-zero = "0.4"
